docs: add docker image migration instructions